--- a/templates/gitlab.rb.j2
+++ b/templates/gitlab.rb.j2
@@ -1,4 +1,10 @@
 
 external_url "{{ gitlab_external_url }}"
+{% if gitlab_http_enabled and not gitlab_https_enabled %}
 nginx['listen_https'] = false
 nginx['listen_port'] = 80
+{% endif %}
+{% if gitlab_https_enabled %}
+nginx['ssl_certificate'] = "/etc/gitlab/ssl/certs/gitlab.crt"
+nginx['ssl_certificate_key'] = "/etc/gitlab/ssl/private/gitlab.key"
+{% endif %}
