--- a/templates/gitlab.rb.j2
+++ b/templates/gitlab.rb.j2
@@ -1,4 +1,3 @@
-
 external_url "{{ gitlab_external_url }}"
 {% if gitlab_http_enabled and not gitlab_https_enabled %}
 nginx['listen_https'] = false
@@ -8,3 +7,7 @@ nginx['listen_port'] = 80
 nginx['ssl_certificate'] = "/etc/ssl{{ gitlab_ssl_cert_path }}"
 nginx['ssl_certificate_key'] = "/etc/ssl{{ gitlab_ssl_key_path }}"
 {% endif %}
+
+{% for line in gitlab_additional_config %}
+{{ line }}
+{% endfor %}
